fix alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -132,6 +132,7 @@ a:hover {
 /* Post page */
 #post-header {
   margin-bottom: 25px;
+    margin-left: 30px;
 }
 
 #post-header h1 {
